[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/Board.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://misc/alagard.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://sounds/lose.mp3" type="AudioStream" id=4]
[ext_resource path="res://sounds/win.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/click.mp3" type="AudioStream" id=6]
[ext_resource path="res://sounds/select.mp3" type="AudioStream" id=7]
[ext_resource path="res://sprites/guide/kill.png" type="Texture" id=8]
[ext_resource path="res://sprites/guide/fall.png" type="Texture" id=9]
[ext_resource path="res://sprites/guide/move.png" type="Texture" id=10]
[ext_resource path="res://sprites/guide/capture.png" type="Texture" id=11]
[ext_resource path="res://misc/notready.tres" type="Theme" id=12]
[ext_resource path="res://sprites/pieces.png" type="Texture" id=13]
[ext_resource path="res://sprites/logo.png" type="Texture" id=14]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 3
period = 46.9
lacunarity = 1.74

[sub_resource type="NoiseTexture" id=2]
height = 517
seamless = true
noise = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.109804, 0.109804, 0.109804, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.180392, 0.180392, 0.180392, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/colors/font_color = Color( 0.760784, 0.733333, 0.690196, 1 )
Button/colors/font_color_disabled = Color( 0.352941, 0.317647, 0.270588, 1 )
Button/colors/font_color_hover = Color( 0.690196, 0.627451, 0.360784, 1 )
Button/colors/font_color_pressed = Color( 0.345098, 0.592157, 0.34902, 1 )
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )
HSeparator/styles/separator = SubResource( 8 )
Label/colors/font_color = Color( 0.733333, 0.721569, 0.666667, 1 )
LineEdit/styles/normal = SubResource( 9 )
VBoxContainer/constants/separation = 30

[sub_resource type="DynamicFont" id=12]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )
Label/colors/font_color = Color( 0.733333, 0.721569, 0.666667, 1 )
VBoxContainer/constants/separation = 6

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="BG"]
modulate = Color( 0.109804, 0.113725, 0.152941, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = SubResource( 2 )
expand = true

[node name="Board" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = -1600
limit_top = -800
limit_right = 1600
limit_bottom = 800
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0

[node name="Listener2D" type="Listener2D" parent="Camera2D"]
current = true

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuFader" type="VBoxContainer" parent="Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -126.0
margin_top = -78.0
margin_right = 126.0
margin_bottom = 269.0
alignment = 1

[node name="fadeout" type="Sprite" parent="Menu/MenuFader"]
position = Vector2( 127, 78 )
scale = Vector2( 3, 3 )
texture = ExtResource( 14 )

[node name="Main" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
margin_right = 252.0
margin_bottom = 90.0
theme = SubResource( 11 )

[node name="Play" type="Button" parent="Menu/MenuFader/Main"]
margin_right = 252.0
margin_bottom = 30.0
text = "Play"

[node name="Guide" type="Button" parent="Menu/MenuFader/Main"]
margin_top = 60.0
margin_right = 252.0
margin_bottom = 90.0
text = "Guide"

[node name="InGame" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
margin_top = 34.0
margin_right = 252.0
margin_bottom = 158.0
theme = SubResource( 11 )

[node name="HSeparator" type="HSeparator" parent="Menu/MenuFader/InGame"]
margin_right = 252.0
margin_bottom = 4.0

[node name="Resume" type="Button" parent="Menu/MenuFader/InGame"]
margin_top = 34.0
margin_right = 252.0
margin_bottom = 64.0
text = "Resume Game"

[node name="Back" type="Button" parent="Menu/MenuFader/InGame"]
margin_top = 94.0
margin_right = 252.0
margin_bottom = 124.0
text = "Quit"

[node name="Play" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 346.0
margin_top = 225.0
margin_right = 597.0
margin_bottom = 444.0
theme = SubResource( 11 )

[node name="HSeparator" type="HSeparator" parent="Menu/MenuFader/Play"]
margin_right = 251.0
margin_bottom = 4.0

[node name="LineEdit" type="LineEdit" parent="Menu/MenuFader/Play"]
margin_top = 34.0
margin_right = 251.0
margin_bottom = 70.0
align = 1
max_length = 10
placeholder_text = "Enter Name"

[node name="Label" type="Label" parent="Menu/MenuFader/Play/LineEdit"]
anchor_right = 1.0
margin_top = -31.0
margin_bottom = -1.0
text = "Nickname:"
align = 1

[node name="Join" type="Button" parent="Menu/MenuFader/Play"]
margin_top = 100.0
margin_right = 251.0
margin_bottom = 130.0
disabled = true
text = "Join Game"

[node name="Back" type="Button" parent="Menu/MenuFader/Play"]
margin_top = 160.0
margin_right = 251.0
margin_bottom = 190.0
text = "Back"

[node name="Lobby" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
margin_right = 252.0
margin_bottom = 337.0
theme = SubResource( 11 )
custom_constants/separation = 24

[node name="LobbyTime" type="Label" parent="Menu/MenuFader/Lobby"]
margin_right = 252.0
margin_bottom = 15.0
theme = SubResource( 13 )
text = "Waiting for players.."
align = 1

[node name="Timer" type="Timer" parent="Menu/MenuFader/Lobby/LobbyTime"]
wait_time = 120.0
one_shot = true

[node name="HSeparator" type="HSeparator" parent="Menu/MenuFader/Lobby"]
margin_top = 39.0
margin_right = 252.0
margin_bottom = 43.0

[node name="LobbyPlayers" type="Label" parent="Menu/MenuFader/Lobby/HSeparator"]
margin_right = 252.0
margin_bottom = 30.0
text = "Players: 0/8"
align = 1

[node name="Lobby" type="VBoxContainer" parent="Menu/MenuFader/Lobby"]
margin_top = 67.0
margin_right = 252.0
margin_bottom = 229.0
theme = SubResource( 13 )

[node name="Player1" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_right = 252.0
margin_bottom = 15.0
align = 1

[node name="Player2" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 21.0
margin_right = 252.0
margin_bottom = 36.0
align = 1

[node name="Player3" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 42.0
margin_right = 252.0
margin_bottom = 57.0
align = 1

[node name="Player4" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 63.0
margin_right = 252.0
margin_bottom = 78.0
align = 1

[node name="Player5" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 84.0
margin_right = 252.0
margin_bottom = 99.0
align = 1

[node name="Player6" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 105.0
margin_right = 252.0
margin_bottom = 120.0
align = 1

[node name="Player7" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 126.0
margin_right = 252.0
margin_bottom = 141.0
align = 1

[node name="Player8" type="Label" parent="Menu/MenuFader/Lobby/Lobby"]
margin_top = 147.0
margin_right = 252.0
margin_bottom = 162.0
align = 1

[node name="Ready" type="Button" parent="Menu/MenuFader/Lobby"]
margin_top = 253.0
margin_right = 252.0
margin_bottom = 283.0
toggle_mode = true
text = "Ready To Start"

[node name="Back" type="Button" parent="Menu/MenuFader/Lobby"]
margin_top = 307.0
margin_right = 252.0
margin_bottom = 337.0
text = "Quit"

[node name="Connecting" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
margin_right = 358.0
margin_bottom = 90.0
theme = SubResource( 11 )

[node name="Label" type="Label" parent="Menu/MenuFader/Connecting"]
margin_right = 358.0
margin_bottom = 30.0
text = "Trying to connect..."
align = 1

[node name="Back" type="Button" parent="Menu/MenuFader/Connecting"]
margin_top = 60.0
margin_right = 358.0
margin_bottom = 90.0
text = "Cancel"

[node name="NoConnect" type="VBoxContainer" parent="Menu/MenuFader"]
visible = false
margin_right = 358.0
margin_bottom = 90.0
theme = SubResource( 11 )

[node name="Label" type="Label" parent="Menu/MenuFader/NoConnect"]
margin_right = 358.0
margin_bottom = 30.0
text = "Can't Connect
To The Server"
align = 1

[node name="Back" type="Button" parent="Menu/MenuFader/NoConnect"]
margin_top = 60.0
margin_right = 358.0
margin_bottom = 90.0
text = "OK"

[node name="Guide" type="Node2D" parent="Menu/MenuFader"]
visible = false
position = Vector2( 124, 0 )

[node name="Capture" type="Sprite" parent="Menu/MenuFader/Guide"]
position = Vector2( -171, 208 )
scale = Vector2( 2, 2 )
texture = ExtResource( 11 )

[node name="Kill" type="Sprite" parent="Menu/MenuFader/Guide"]
position = Vector2( 270, 10 )
scale = Vector2( 2, 2 )
texture = ExtResource( 8 )

[node name="Fall" type="Sprite" parent="Menu/MenuFader/Guide"]
position = Vector2( 335, 133 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="Move" type="Sprite" parent="Menu/MenuFader/Guide"]
position = Vector2( -316, 41 )
scale = Vector2( 2, 2 )
texture = ExtResource( 10 )

[node name="Pieces" type="Sprite" parent="Menu/MenuFader/Guide"]
position = Vector2( 6, 189 )
rotation = 0.174533
scale = Vector2( 4, 4 )
texture = ExtResource( 13 )
hframes = 6
vframes = 9
frame = 35

[node name="Label2" type="Label" parent="Menu/MenuFader/Guide"]
margin_left = -474.0
margin_top = -169.0
margin_right = -96.0
margin_bottom = -57.0
theme = ExtResource( 12 )
text = "Click on your unit and then click on a highlighted square to move your unit.
Each unit can move only once in a 10 seconds indicated by the white cooldown bar above it.
"
autowrap = true

[node name="Label3" type="Label" parent="Menu/MenuFader/Guide"]
margin_left = -479.0
margin_top = 178.0
margin_right = -263.0
margin_bottom = 319.0
theme = ExtResource( 12 )
text = "Move to the adjacent square from a grey piece to capture it as your own.
Captured pieces can move immediately so use them to advance fast!"
autowrap = true

[node name="Label4" type="Label" parent="Menu/MenuFader/Guide"]
margin_left = 121.0
margin_top = -176.0
margin_right = 465.0
margin_bottom = -35.0
theme = ExtResource( 12 )
text = "Make a move to the square where your enemy is standing to slay his unit.
Remember that pawns can only slay enemies diagonally."
align = 2
autowrap = true

[node name="Label5" type="Label" parent="Menu/MenuFader/Guide"]
margin_left = 85.0
margin_top = 223.0
margin_right = 462.0
margin_bottom = 364.0
theme = ExtResource( 12 )
text = "Watch out for the shaking squares since they will soon fall and take units to the void with them."
align = 2
autowrap = true

[node name="Label6" type="Label" parent="Menu/MenuFader/Guide"]
margin_left = -118.0
margin_top = 8.0
margin_right = 121.0
margin_bottom = 192.0
theme = ExtResource( 12 )
text = "Slay your enemies but remember to keep your king safe as if he dies, all your units will be captured by the enemy.

"
align = 1
autowrap = true

[node name="Back" type="Button" parent="Menu/MenuFader/Guide"]
margin_left = -124.0
margin_top = 304.0
margin_right = 128.0
margin_bottom = 334.0
theme = SubResource( 11 )
text = "Back"

[node name="Logo" type="Sprite" parent="Menu"]
visible = false
position = Vector2( 512, 119 )
texture = ExtResource( 14 )

[node name="Overlay" type="CanvasLayer" parent="."]
visible = false

[node name="End" type="Label" parent="Overlay"]
anchor_right = 1.0
margin_top = 43.0
margin_bottom = 73.0
theme = SubResource( 11 )
text = "Game Over!"
align = 1

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "sfx"

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "sfx"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "sfx"

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
bus = "sfx"

[connection signal="mouse_entered" from="Menu/MenuFader/Main/Play" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Main/Play" to="." method="_on_Play_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Main/Guide" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Main/Guide" to="." method="_on_Guide_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/InGame/Resume" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/InGame/Resume" to="." method="_on_Resume_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/InGame/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/InGame/Back" to="." method="_on_Back_pressed"]
[connection signal="text_changed" from="Menu/MenuFader/Play/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Play/Join" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Play/Join" to="." method="_on_Join_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Play/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Play/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Lobby/Ready" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Lobby/Ready" to="." method="_on_Ready_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Lobby/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Lobby/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Connecting/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Connecting/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/NoConnect/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/NoConnect/Back" to="." method="_on_Back_pressed"]
[connection signal="mouse_entered" from="Menu/MenuFader/Guide/Back" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="Menu/MenuFader/Guide/Back" to="." method="_on_Back_pressed"]
